<resources>
    <string name="app_name">Manju_Export</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="login_txt">Login</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>

    <string name="logout_exit_txt_alert_msg">Are you sure\nwant to exit ?</string>
    <string name="logout_exit_txt_alert_msg_new">Are you sure want to exit ?</string>
    <string name="check_internet_conn_txt">Check your internet connection</string>
    <string name="back_online_txt">You are back online!</string>
    <string name="pls_enter_username_txt">Please enter your username</string>
    <string name="pls_enter_pwd_txt">Please enter your password</string>
    <string name="pwd_length_min_5_txt">Password length should be maximum 5</string>
    <string name="scan_txt">Scan</string>
    <string name="entry_type_txt">Entry Type</string>
    <string name="list_txt">List</string>
    <string name="cancel_txt"><u>Cancel</u></string>
    <string name="home_txt">Home</string>

    <string name="sewing_txt">Sewing</string>
    <string name="checking_entry_txt">Checking Entry</string>
    <string name="rechecking_entry_txt">Rechecking Entry</string>
    <string name="ironing_entry_txt">Ironing Entry</string>


    <string name="checking_txt">Checking</string>
    <string name="rechecking_txt">Rechecking</string>
    <string name="ironing_txt">Ironing</string>
    <string name="scanning_txt">Scanning</string>
    <string name="save_txt">Save</string>
    <string name="select_shift_txt">Select Shift</string>
    <string name="select_tailor_txt">Select Tailor</string>
    <string name="select_operation_txt">Select Operation</string>
    <string name="scan_again_txt"><u>Scan Again</u></string>
    <string name="manual_txt">Manual</string>
    <string name="shift_txt">Shift</string>
    <string name="operation_txt">Operation</string>
    <string name="tailor_txt">Tailor</string>
    <string name="successfully_submitted_txt">Successfully Submitted</string>
    <string name="io_number_txt">IO Number</string>
    <string name="color_txt">Color</string>
    <string name="checking_person_txt">Checking Person</string>
    <string name="enter_pieces_txt">Enter Pieces</string>
    <string name="packing_txt">Packing</string>
    <string name="select_io_number_txt">Select IO Number</string>
    <string name="select_color_txt">Select Color</string>
    <string name="select_checking_person_txt">Select Person</string>
    <string name="pieces_txt">Pieces</string>
    <string name="total_pieces_txt">Total Pieces</string>
    <string name="ok_pieces_txt">Ok Pieces</string>
    <string name="defects_txt">Defects</string>
    <string name="defect_txt">Defect</string>
    <string name="edit_txt"><u>Edit</u></string>
    <string name="ok_txt">Ok</string>
    <string name="logout_txt">Logout</string>
    <string name="select_pieces_txt">Select Pieces</string>
    <string name="no_of_pieces_txt">No of Pieces</string>
    <string name="select_no_of_pieces_txt">Select No of Pieces</string>
    <string name="delete_txt"><u>Delete</u></string>
    <string name="exit_txt">Exit</string>
    <string name="pls_enter_valid_user">Please enter valid user</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="home_second">Home Second</string>
    <string name="qr_code_not_exist_txt">QR code doesn\'t exist.</string>
    <string name="bundle_number_txt">Bundle No</string>
    <string name="io_no_txt">IO No</string>
    <string name="select_bundle_number_txt">Select Bundle Number</string>
    <string name="warning_txt">Warning</string>
</resources>
